--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,19 @@
-*.usdz filter=lfs diff=lfs merge=lfs -text
-*.usdc filter=lfs diff=lfs merge=lfs -text
+# Track large files with Git LFS
+
+# Media files
 *.mov filter=lfs diff=lfs merge=lfs -text
-*.blend filter=lfs diff=lfs merge=lfs -text
-*.blend1 filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
 *.exr filter=lfs diff=lfs merge=lfs -text
 *.hdr filter=lfs diff=lfs merge=lfs -text
-*.png filter=lfs diff=lfs merge=lfs -text
 
-# Exclude Reality Composer Pro project files from LFS
+# 3D assets
+*.usdz filter=lfs diff=lfs merge=lfs -text
+*.usdc filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
+*.blend1 filter=lfs diff=lfs merge=lfs -text
+
+# Exclude only Reality Composer Pro metadata files from LFS
 honda/Packages/RealityKitContent/Package.realitycomposerpro/ProjectData/* -filter=lfs -diff=lfs -merge=lfs text
 honda/Packages/RealityKitContent/Package.realitycomposerpro/WorkspaceData/* -filter=lfs -diff=lfs -merge=lfs text
 honda/Packages/RealityKitContent/Package.realitycomposerpro/PluginData/* -filter=lfs -diff=lfs -merge=lfs text
